unpackaged/main/default/objects/Pie_de_Firma__c/Pie_de_Firma__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Pie de Firma</label>
</CustomObject>