unpackaged/main/default/objects/Pie_de_Firma__c/fields/Correo_electronico_1__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_1__c</fullName>
    <label>Correo electrónico 1</label>
    <type>Email</type>
</CustomField>