unpackaged/main/default/objects/Pie_de_Firma__c/fields/Correo_electronico_2__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_2__c</fullName>
    <label>Correo electrónico 2</label>
    <type>Email</type>
</CustomField>