unpackaged/main/default/objects/Pie_de_Firma__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>