unpackaged/main/default/objects/Pie_de_Firma__c/fields/Puesto__c.field-meta.xml
<CustomField>
    <fullName>Puesto__c</fullName>
    <label>Puesto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>