unpackaged/main/default/objects/Pie_de_Firma__c/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <label>Télefono</label>
    <length>12</length>
    <type>Text</type>
</CustomField>